src/ts/tests/fixtures/invalid_include_tree/needs_static.cloesce.ts
// @ts-nocheck
// InvalidDataSourceDefinition

@Model
export class Foo {
  @PrimaryKey
  id: number;

  @DataSource
  bar: IncludeTree<Foo> = {}; // must be static
}
